# SongGenGUI

./: .gitignore  App.cpp  App.h  App.ui  ButtonEventFilter.cpp  ButtonEventFilter.h  CMakeLists.txt  Cell.cpp  Cell.h  ContextMenuHandler.cpp  ContextMenuHandler.h  CustomSlider.h  Player.h  SliderHeader.h  main.cpp
